apps/joke/base/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: joke
  labels:
    app: joke
spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: joke
  template:
    metadata:
      labels:
        app: joke
    spec:
      containers:
        - name: joke
          image: npastorale/joke@sha256:c33927f4258f1fbba96a0f19644f8ed8ee936496022a7667e69f1450ed45d766
          resources:
            requests:
              memory: "56Mi"
              cpu: "100m"
            limits:
              memory: "8Gi"
              cpu: "4"
          imagePullPolicy: Always
          ports:
            - containerPort: 80
