apps/joke/base/HTTPRoute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: joke-http
spec:
  hostnames:
    - elverdaderorey.nahue.ar
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: joke
      sectionName: http
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
            hostname: elverdaderorey.nahue.ar
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: joke-https
spec:
  hostnames:
    - elverdaderorey.nahue.ar
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: joke
      sectionName: https
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: joke
          port: 80
          weight: 1
